@@ -1,3 +1,4 @@
+* Make product code unique
 * Add code to template as variant prefix code
 * Hide product fields inherited from template when empty
 * Skip default products when template is created from product
